cmake_minimum_required(VERSION 3.10)

# Set the project name
project(VariantProject)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add the executable
add_executable(VariantProject
        "Variant/Variant.cpp"
        "Variant/Variant.h"
        "json11/json11.cpp"
        "json11/json11.hpp"
)

